--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ bleach==6.1.0
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.1.8
 comm==0.2.2
 contourpy==1.1.1
 cryptography==45.0.3
@@ -47,6 +48,7 @@ jaraco.functools==4.1.0
 jedi==0.19.2
 jeepney==0.9.0
 Jinja2==3.1.6
+joblib==1.4.2
 json5==0.12.0
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -70,11 +72,14 @@ matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.3
 more-itertools==10.5.0
+mpmath==1.3.0
 nbclient==0.10.1
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.0
 nh3==0.2.21
+nltk==3.9.1
 notebook_shim==0.2.4
 numpy==1.24.4
 overrides==7.7.0
@@ -120,10 +125,15 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 stack-data==0.6.3
+sympy==1.13.3
 terminado==0.18.1
+textblob==0.18.0.post0
 tinycss2==1.2.1
 tokenizers==0.20.3
 tomli==2.2.1
+torch==2.4.1+cpu
+torchaudio==2.4.1+cpu
+torchvision==0.19.1+cpu
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
@@ -136,6 +146,7 @@ tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.2.3
 ushlex==0.99.1
+vaderSentiment==3.3.2
 wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
