--- a/requirements.txt
+++ b/requirements.txt
@@ -10,18 +10,24 @@ backcall==0.2.0
 backports.tarfile==1.2.0
 beautifulsoup4==4.13.4
 bleach==6.1.0
+blis==0.7.11
+catalogue==2.0.10
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
 comm==0.2.2
+confection==0.1.5
+config==0.5.1
 contourpy==1.1.1
 cryptography==45.0.3
 cycler==0.12.1
+cymem==2.0.11
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
 docutils==0.20.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
 exceptiongroup==1.3.0
 executing==2.2.0
 fastjsonschema==2.21.1
@@ -64,6 +70,9 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 keyring==25.5.0
 kiwisolver==1.4.7
+langcodes==3.4.1
+language_data==1.3.0
+marisa-trie==1.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplot==0.1.9
@@ -73,6 +82,7 @@ mdurl==0.1.2
 mistune==3.1.3
 more-itertools==10.5.0
 mpmath==1.3.0
+murmurhash==1.0.13
 nbclient==0.10.1
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -87,21 +97,27 @@ packaging==25.0
 pandas==2.0.3
 pandocfilters==1.5.1
 parso==0.8.4
+pathlib_abc==0.1.1
+pathy==0.11.0
 pexpect==4.9.0
 pickleshare==0.7.5
 pillow==10.4.0
 pkgutil_resolve_name==1.3.10
 platformdirs==4.3.6
+preshed==3.0.10
 prometheus_client==0.21.1
 prompt_toolkit==3.0.51
 psutil==7.0.0
+psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
+pydantic==1.10.22
 Pygments==2.19.1
 pyloco==0.0.139
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==3.3.0
 pytz==2025.2
 PyYAML==6.0.2
@@ -122,12 +138,18 @@ SecretStorage==3.3.3
 Send2Trash==1.8.3
 SimpleWebSocketServer==0.1.2
 six==1.17.0
+smart-open==6.4.0
 sniffio==1.3.1
 soupsieve==2.7
+spacy==3.5.3
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 stack-data==0.6.3
 sympy==1.13.3
 terminado==0.18.1
 textblob==0.18.0.post0
+thinc==8.1.12
 tinycss2==1.2.1
 tokenizers==0.20.3
 tomli==2.2.1
@@ -139,6 +161,7 @@ tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.46.3
 twine==6.1.0
+typer==0.7.0
 types-python-dateutil==2.9.0.20241206
 typing==3.7.4.3
 typing_extensions==4.13.2
@@ -147,13 +170,9 @@ uri-template==1.3.0
 urllib3==2.2.3
 ushlex==0.99.1
 vaderSentiment==3.3.2
+wasabi==1.1.3
 wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
 websocket-client==1.8.0
 zipp==3.20.2
-cx_Oracle==8.3.0
-python-dotenv==1.0.0
-wordcloud==1.9.3
-psycopg2-binary==2.9.9
-SQLAlchemy==2.0.27
